--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	      <div class="slider-item ">
 	      	<div class="overlay"></div>
 	        <div class="container">
-	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+	          <div class="row d-md-flex no-gutters slider-text align-items-start justify-content-end" data-scrollax-parent="true">
 	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/gring01.jpg);">
 	          		<div class="overlay"></div>
 	          	</div>
@@ -73,7 +73,7 @@
 	      <div class="slider-item">
 	      	<div class="overlay"></div>
 	        <div class="container">
-	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+	          <div class="row d-flex no-gutters slider-text align-items-start justify-content-end" data-scrollax-parent="true">
 	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/gring02.JPG);">
 	          		<div class="overlay"></div>
 	          	</div>
