--- a/index.html
+++ b/index.html
@@ -153,14 +153,14 @@
     					<p class="mt-4"> Master of Engineering in Computer Science.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2019-2023</span>
+    					<span class="date">2019 - 2023</span>
     					<h2>Bachelor of Engineering in Software Engineer</h2>
     					<span class="position">King Mongkut's University of Technology Ladkrabang</span>
     					<p class="mt-4">Bachelor of Engineering in Software Engineer. (International Program).</p>
 						<p class="mt-4">President of Software Engineering student.</p>
     				</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2012-2018</span>
+    					<span class="date">2012 - 2018</span>
     					<h2>Special Program</h2>
     					<span class="position">Satriwitthaya 2 School</span>
 						<p class="mt-4">Intensive English program.</p>
